# lab-socket-webhooks

./: pyproject.toml  readme.md  tcp-client.py  tcp-server.py  webhooks.py
